--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,13 @@ p {
 }
 
 .hero {
-    height: 800px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    height: 600px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 .float-left {
